--- a/configs/tnet.yaml
+++ b/configs/tnet.yaml
@@ -1,5 +1,6 @@
 model : tnet # tnet mnet end2end
 backbone: resnet50
-tnet_pretrained: None # path to pretrained weight
-mnet_pretrained: None
-end2end_pretrained: None
+pretrained_tnet: None # path to pretrained weight
+pretrained_mnet: None
+pretrained_end2end: None
+cuda : True
