--- a/configs/pretrain_tnet.yaml
+++ b/configs/pretrain_tnet.yaml
@@ -2,15 +2,15 @@ mode: pretrain_tnet
 cuda: true
 ngpu: 1
 
-tnet_checkpoint: Tnet.pth
-checkpoint_name : Tnet.pth # set None to save by period
+tnet_checkpoint: Tnet18.pth
+checkpoint_name : Tnet18.pth # set None to save by period
 savedir : ./../../content/drive/MyDrive/AI_Colab/SHM/
 eval : True
-backbone: resnet50
+backbone: resnet18
 data_root: data/dataset
 batch_size: 10
-lr: 0.0005
-weight_decay: 0.0005
+lr: 0.0001
+weight_decay: 0.001
 max_epoch: 50
 loss_lambda: 0.01    # trade-off between prediction loss and classification loss
 
